init success build

--- a/launcher/build.gradle
+++ b/launcher/build.gradle
@@ -1,57 +1,20 @@
-/*
- * Simple TV Launcher
- * Copyright 2017 Alexandre Del Bigio
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
-apply plugin: 'com.android.application'
-apply plugin: 'com.github.kt3k.coveralls'
-apply plugin: 'checkstyle'
-
-checkstyle {
-    toolVersion = '6.19'
+plugins {
+    id 'com.android.application'
+    id 'com.github.kt3k.coveralls'
+    id 'checkstyle'
 }
 
-check.dependsOn 'checkstyle'
-
-task checkstyle(type: Checkstyle) {
-    configFile file("${project.rootDir}/style/checkstyle.xml")
-    configProperties.checkstyleSuppressionsPath = file("${project.rootDir}/style/suppressions.xml").absolutePath
-
-    source 'src/main/java'
-    include 'org/cosinus/**/*.java'
-    exclude '**/gen/**'
-
-    def configProps = ['proj.module.dir': projectDir.absolutePath]
-    configProperties configProps
-
-    classpath = files()
-}
+// Укажите версию Kotlin в начале файла
+def kotlin_version = '1.8.22'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '26.0.2'
-
-    lintOptions {
-        abortOnError true
-        lintConfig file('lint.xml')
-    }
+    namespace "org.cosinus.launchertv"
+    compileSdk 34
 
     defaultConfig {
         applicationId "org.cosinus.launchertv"
-        minSdkVersion 14
-        targetSdkVersion 30
+        minSdkVersion 21
+        targetSdkVersion 34
         versionCode 159
         versionName "1.5.9"
     }
@@ -76,7 +39,6 @@ android {
             proguardFile 'proguard-rules.pro'
             zipAlignEnabled true
             if (project.hasProperty('keystorePassword')) {
-                //noinspection GroovyAssignabilityCheck
                 signingConfig signingConfigs.release
             }
         }
@@ -85,17 +47,39 @@ android {
             testCoverageEnabled true
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    lint {
+        abortOnError true
+        lintConfig file('lint.xml')
+    }
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:25.4.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+
+    // Обновите зависимости на AndroidX
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.core:core-ktx:1.13.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
 
 coveralls {
-    jacocoReportPath = "${buildDir}/reports/coverage/debug/report.xml"
+    jacocoReportPath = layout.buildDirectory.file("reports/coverage/debug/report.xml").get().asFile.absolutePath
 }
 
 tasks.coveralls {
     dependsOn 'connectedAndroidTest'
     onlyIf { System.env.'CI' }
+}
+
+configurations.all {
+    resolutionStrategy {
+        force "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+        force "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    }
 }
