--- a/build.gradle
+++ b/build.gradle
@@ -2,21 +2,19 @@
 
 buildscript {
     repositories {
-        jcenter()
         google()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.android.tools.build:gradle:8.4.1' // Убедитесь, что версия правильная
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.6.3'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
 allprojects {
     repositories {
-        jcenter()
         google()
+        mavenCentral()
     }
 }
+
