--- a/launcher/src/main/AndroidManifest.xml
+++ b/launcher/src/main/AndroidManifest.xml
@@ -1,49 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Simple TV Launcher
-  ~ Copyright 2017 Alexandre Del Bigio
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~     http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools">
 
-<manifest package="org.cosinus.launchertv"
-		  xmlns:android="http://schemas.android.com/apk/res/android"
-		  xmlns:tools="http://schemas.android.com/tools">
+	<uses-feature android:name="android.hardware.touchscreen" android:required="false"/>
+	<uses-feature android:name="android.hardware.telephony" android:required="false"/>
+	<uses-feature android:name="android.hardware.camera" android:required="false"/>
+	<uses-feature android:name="android.hardware.nfc" android:required="false"/>
+	<uses-feature android:name="android.hardware.location.gps" android:required="false"/>
+	<uses-feature android:name="android.hardware.microphone" android:required="false"/>
+	<uses-feature android:name="android.hardware.sensor" android:required="false"/>
 
-	<uses-feature
-		android:name="android.hardware.touchscreen"
-		android:required="false"/>
-	<uses-feature
-		android:name="android.hardware.telephony"
-		android:required="false"/>
-	<uses-feature
-		android:name="android.hardware.camera"
-		android:required="false"/>
-	<uses-feature
-		android:name="android.hardware.nfc"
-		android:required="false"/>
-	<uses-feature
-		android:name="android.hardware.location.gps"
-		android:required="false"/>
-	<uses-feature
-		android:name="android.hardware.microphone"
-		android:required="false"/>
-	<uses-feature
-		android:name="android.hardware.sensor"
-		android:required="false"/>
-
-	<uses-permission
-		android:name="android.permission.SET_WALLPAPER"/>
+	<uses-permission android:name="android.permission.SET_WALLPAPER"/>
 
 	<application
 		android:allowBackup="true"
@@ -53,19 +20,21 @@
 		android:supportsRtl="false"
 		android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
 		tools:ignore="GoogleAppIndexingWarning">
+
+		<!-- Добавлено android:exported -->
 		<activity
 			android:name=".Launcher"
-			android:label="@string/app_name">
+			android:label="@string/app_name"
+			android:exported="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
-
 				<category android:name="android.intent.category.LAUNCHER"/>
 				<category android:name="android.intent.category.HOME"/>
 				<category android:name="android.intent.category.DEFAULT"/>
 			</intent-filter>
 		</activity>
+
 		<activity android:name=".activities.ApplicationList"/>
 		<activity android:name=".activities.Preferences"/>
 	</application>
-
 </manifest>
